<resources>
    <string name="app_name">AppCompat</string>
    <string name="descriptionString">Proszę o zaliczenie</string>
    <string name="nameString">Oktawian Lasek 204828</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="opcja1">opcja 1</string>
    <string name="opcja2">opcja 2</string>

    <string name="text1">Napis</string>
    <string name="text2">Zawartość</string>
    <string name="text3">Tekst</string>

    <string name="text">tekst</string>
    <string name="email">e-mail</string>
    <string name="number">liczba</string>
    <string name="phone">Tel.</string>
</resources>
